# Legal-Workflow-Generator

./: .env.example  .gitignore  README.md  demo_query_rag.py  docker-compose.yml  main.py  pyproject.toml  run_units.sh  test_conn.py  test_normalizer.py  validate_search.py  validation_report.txt
datasets/: combined_dataset.json  corporategovernance.json  dpdp.json  tax.json  womanandsex.json
legal_workflow_generator/config/: values.py
legal_workflow_generator/query/: README.md  __init__.py  context_resolver.py  intent_classifier.py  normalizer.py
legal_workflow_generator/rag/: __init__.py  bm25_retriever.py  embeddings.py  generator.py  hybrid_search.py  ingestion.py  pipeline.py  setup.py
legal_workflow_generator/typings/: types.py
sabkuch/: info.txt  softwarelicensing.json
tests/: test_conn.py  test_intent.py  test_query.py  test_rag_pipeline.py
